--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -38,10 +38,6 @@ html {
   box-sizing: border-box;
   font-size: 62.5%; // 1// rem = 10px
 
-  @media only screen and (max-width: $bp-large) {
-    font-size: 50%;
-  }
-
 }
 
 body {
