--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -197,7 +197,7 @@
   }
 
   &__container {
-    padding: 0 1.6rem 6rem 1.6rem;
+    padding: 1.6rem 1.6rem 6rem 1.6rem;
     position: relative;
     top: 4rem;
 
